# goldeneye-metal

./: .clang-format  .clang-tidy  .cmake-format.yaml  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Launch GoldenEye.command  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
src/audio/: CMakeLists.txt  audio_driver.cpp  audio_system.cpp  xma_context.cpp  xma_decoder.cpp  xma_register_file.cpp
src/audio/nop/: nop_audio_system.cpp
src/audio/sdl/: sdl_audio_driver.cpp  sdl_audio_system.cpp
src/codegen/: CMakeLists.txt  analyze.cpp  binary_view.cpp  builders.h  code_emitter.cpp  codegen.cpp  codegen_context.cpp  codegen_flags.cpp  codegen_flags.h  codegen_logging.h  codegen_writer.cpp  config.cpp  decoded_binary.cpp  decoded_binary.h  function_graph.cpp  function_scanner.cpp  instruction_dispatch.cpp  manifest.cpp  phase_discover.cpp  phase_gapfill.cpp  phase_helpers.h  phase_merge.cpp  phase_register.cpp  phase_scan.cpp  phase_validate.cpp  project_recompiler.cpp  sig_scanner.cpp  template_registry.cpp  template_registry_internal.h  test_support.cpp  vtable_scanner.cpp
src/codegen/builders/: arithmetic.cpp  builder_context.h  comparison.cpp  context.cpp  control_flow.cpp  floating_point.cpp  helpers.h  logical.cpp  memory.cpp  system.cpp  vector.cpp
src/codegen/ppc/: disasm.cpp  disasm.h  instruction.cpp  instruction.h  opcode.cpp  opcode.h
src/core/: CMakeLists.txt  arena.cpp  atomic_posix.cpp  atomic_win.cpp  bit_map.cpp  bit_stream.cpp  byte_stream.cpp  clock.cpp  clock_posix.cpp  clock_win.cpp  cvar.cpp  dbg_posix.cpp  dbg_win.cpp  dynlib_posix.cpp  dynlib_win.cpp  exception_handler.cpp  exception_handler_posix.cpp  exception_handler_win.cpp  fiber_posix.cpp  fiber_win32.cpp  filesystem.cpp  filesystem_posix.cpp  filesystem_wildcard.cpp  filesystem_win.cpp  logging.cpp  mapped_memory_posix.cpp  mapped_memory_win.cpp  math_gcc.cpp  math_msvc.cpp  memory.cpp  memory_posix.cpp  memory_win.cpp  mutex.cpp  platform_posix.h  platform_win.h  ring_buffer.cpp  seh_posix.cpp  seh_win.cpp  sha256.cpp  socket_posix.cpp  (+13 more)
src/core/perf/: counter.cpp  metal_performance.cpp
src/filesystem/: CMakeLists.txt  device.cpp  entry.cpp  vfs_dump.cpp  virtual_file_system.cpp
src/filesystem/devices/: disc_image_device.cpp  disc_image_entry.cpp  disc_image_file.cpp  host_path_device.cpp  host_path_entry.cpp  host_path_file.cpp  null_device.cpp  null_entry.cpp  null_file.cpp  stfs_container_device.cpp  stfs_container_entry.cpp  stfs_container_file.cpp
src/graphics/: CMakeLists.txt  command_processor.cpp  flags.cpp  graphics_system.cpp  packet_disassembler.cpp  primitive_processor.cpp  register_file.cpp  registers.cpp  sampler_info.cpp  shared_memory.cpp  trace_dump.cpp  trace_player.cpp  trace_reader.cpp  trace_viewer.cpp  trace_writer.cpp  xenos.cpp
src/graphics/d3d12/: command_processor.cpp  deferred_command_list.cpp  graphics_system.cpp  pipeline_cache.cpp  primitive_processor.cpp  render_target_cache.cpp  shader.cpp  shared_memory.cpp  texture_cache.cpp
src/graphics/format/: ucode.cpp
src/graphics/metal/: command_processor.cpp  draw_renderer.mm  graphics_system.cpp  msl_compiler.mm  pipeline_probe_test.mm  resolve_copy_test.mm  shader.cpp  shared_memory.mm  texture_cache.mm  texture_decode_validation_test.cpp
src/graphics/shaders/: ge_grade.cs.hlsl  placeholder.ps.glsl  resolve_downscale.cs.glsl  resolve_downscale.cs.hlsl
src/graphics/util/: draw.cpp  draw_extent_estimator.cpp
src/graphics/vulkan/: command_processor.cpp  deferred_command_buffer.cpp  graphics_system.cpp  pipeline_cache.cpp  primitive_processor.cpp  render_target_cache.cpp  shader.cpp  shared_memory.cpp  texture_cache.cpp  trace_dump_main.cpp
src/input/: CMakeLists.txt  input_system.cpp
src/input/mnk/: mnk_input_driver.cpp
src/input/nop/: nop_input_driver.cpp
src/input/sdl/: sdl_input_driver.cpp
src/input/xinput/: xinput_input_driver.cpp
src/kernel/: CMakeLists.txt  export_table_pre.inc  kernel_init.cpp
src/kernel/crt/: file.cpp  heap.cpp  memory.cpp  string.cpp  threading.cpp
src/kernel/xam/: ge_online.cpp  ge_online.h  ge_online_protocol.h  xam_avatar.cpp  xam_content.cpp  xam_content_aggregate.cpp  xam_content_device.cpp  xam_debug.cpp  xam_enum.cpp  xam_info.cpp  xam_input.cpp  xam_locale.cpp  xam_misc.cpp  xam_module.cpp  xam_msg.cpp  xam_net.cpp  xam_notify.cpp  xam_nui.cpp  xam_party.cpp  xam_task.cpp  xam_ui.cpp  xam_user.cpp  xam_video.cpp  xam_voice.cpp
src/kernel/xbdm/: xbdm_misc.cpp  xbdm_module.cpp
src/kernel/xboxkrnl/: cert_monitor.cpp  debug_monitor.cpp  xboxkrnl_audio.cpp  xboxkrnl_audio_xma.cpp  xboxkrnl_crypt.cpp  (+17 more)
src/rexglue/: CMakeLists.txt  cli_utils.h  main.cpp
src/system/: CMakeLists.txt  elf_module.cpp  entry_table.cpp  export_resolver.cpp  function_dispatcher.cpp  guest_path.cpp  kernel_module.cpp  kernel_state.cpp  lzx.cpp  map_parser.cpp  mmio_handler.cpp  module.cpp  ppc_types.cpp  runtime.cpp  shared_library.cpp  thread.cpp  thread_state.cpp  user_module.cpp  xenumerator.cpp  xevent.cpp  xex_module.cpp  xfile.cpp  xiocompletion.cpp  xmemory.cpp  xmodule.cpp  xmutant.cpp  xnotifylistener.cpp  xobject.cpp  xsemaphore.cpp  xsocket.cpp  xsymboliclink.cpp  xthread.cpp  xtimer.cpp
src/ui/: CMakeLists.txt  graphics_upload_buffer_pool.cpp  graphics_util.cpp  imgui_dialog.cpp  imgui_drawer.cpp  immediate_drawer.cpp  keybinds.cpp  macos_input_util.h  macos_key_translation.h  menu_item.cpp  presenter.cpp  renderdoc_api.cpp  rex_app.cpp  surface_gnulinux.cpp  surface_macos.mm  surface_win.cpp  window.cpp  window_gtk.cpp  window_macos.mm  window_win.cpp  windowed_app.cpp  windowed_app_context.cpp  windowed_app_context_gtk.cpp  windowed_app_context_win.cpp  windowed_app_main_macos.mm  windowed_app_main_posix.cpp  windowed_app_main_win.cpp
tests/: CMakeLists.txt
tests/launcher/: macos_launcher_test.sh
tests/ppc/: CMakeLists.txt
tests/tools/: benchmark_dam_test.py  metal_profile_parser_test.py  render_regression_test.py  stability_cycle_test.py
tests/unit/: CMakeLists.txt
(+719 files in other folders)
